create searchPage, skipFUnnel

--- a/java/myFirstTestMaven/src/dating/mob/pages/todoForMobPages.html
+++ b/java/myFirstTestMaven/src/dating/mob/pages/todoForMobPages.html
@@ -7,6 +7,8 @@
 <body>
 <!--
 @TODO in BaseIndexPage replace in method fillRegistrationDataMans Location to getUserLocation from vith IP DATA
+@TODO in baseSearchPage add datas from notificator; search settings, left menu
+@TODO create method to click on anyButton like message, wink, friends etc
 -->
 </body>
 </html>
